<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:foreground="@drawable/user"
            tools:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/lbl_user"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ej_user"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/lbl_pass"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ej_pass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_rounded"
            android:onClick="button1"
            android:text="@string/btn_in" />
            <!--android:background="#4CAF50"-->

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_rounded2"
            android:onClick="button2"
            android:text="@string/btn_up" />
            <!--android:background="#E91E63"-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_light_background"
                android:onClick="socialbutton"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/facebook" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_light_background"
                android:onClick="socialbutton"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/gorjeo" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_light_background"
                android:onClick="socialbutton"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/linkedin" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_light_background"
                android:onClick="socialbutton"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/google" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>